data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2074.wast
;; 5. **Test Description:**    A block with nested blocks and an inner loop using `br_if` on stack slots not properly managed, leading to an infinite loop.      **Constraint Checked:** Stack management and tracking within nested blocks and loops.      **Relation to Infinite Loops:** Ensures correct handling of stack slots to prevent mismanagement leading to unintentional infinite loops.

(assert_invalid
  (module (func $nested-block-loop
    (block (result i32)
      (block (result i32)
        (loop (result i32)
          (i32.const 0)
          (br_if 0 (i32.const 1))
        )
      )
      (br 0 (i32.const 42))
    )
  ))
  "type mismatch"
)